LinguaFrancaParser.py
# Generated from C:\Users\pmora\Documents\Git\GitHub\LinguaFranca/LinguaFranca.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LinguaFrancaParser ( Parser ):

    grammarFileName = "LinguaFranca.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'target'", "';'", "'import'", "'from'", 
                     "'as'", "'federated'", "'main'", "'realtime'", "'reactor'", 
                     "'<'", "'>'", "'at'", "'extends'", "'{'", "'}'", "'reset'", 
                     "'state'", "':'", "'const'", "'method'", "'('", "')'", 
                     "'mutable'", "'input'", "'output'", "'timer'", "'initial'", 
                     "'mode'", "'action'", "'reaction'", "'mutation'", "'->'", 
                     "'deadline'", "'STP'", "'preamble'", "'='", "'new'", 
                     "'+'", "'~>'", "'after'", "'serializer'", "'@'", "'['", 
                     "']'", "'.'", "'interleaved'", "'time'", "'*'", "'widthof('", 
                     "'logical'", "'physical'", "'private'", "'public'", 
                     "'startup'", "'shutdown'", "'history'", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'[]'", "'{='", "'=}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "COMMA", "Boolean", "DottedName", "WS", 
                      "TRUE", "FALSE", "ID", "INT", "NEGINT", "FLOAT_EXP_SUFFIX", 
                      "SL_COMMENT", "ML_COMMENT", "LT_ANNOT", "STRING", 
                      "CHAR_LIT", "ANY_OTHER", "Kebab", "IPV4Addr", "HEXDIG", 
                      "H16", "LS32", "IPV6Addr", "SignedFloat", "FileName", 
                      "Path", "TimeUnit", "OPEN_CLOSE_SQ_BR", "SC_MARK", 
                      "EC_MARK", "Token" ]

    RULE_model = 0
    RULE_targetDecl = 1
    RULE_importDecl = 2
    RULE_reactorDecl = 3
    RULE_importedReactor = 4
    RULE_reactor = 5
    RULE_typeParm = 6
    RULE_typeExpr = 7
    RULE_stateVar = 8
    RULE_method = 9
    RULE_methodArgument = 10
    RULE_inputDecl = 11
    RULE_outputDecl = 12
    RULE_timer = 13
    RULE_modeDecl = 14
    RULE_action = 15
    RULE_reaction = 16
    RULE_triggerRef = 17
    RULE_builtinTriggerRef = 18
    RULE_deadline = 19
    RULE_sTP = 20
    RULE_preamble = 21
    RULE_instantiation = 22
    RULE_connection = 23
    RULE_serializer = 24
    RULE_attribute = 25
    RULE_attrParm = 26
    RULE_attrParmValue = 27
    RULE_keyValuePairs = 28
    RULE_keyValuePair = 29
    RULE_array = 30
    RULE_element = 31
    RULE_typedVariable = 32
    RULE_variable = 33
    RULE_varRef = 34
    RULE_varRefOrModeTransition = 35
    RULE_assignment = 36
    RULE_parameter = 37
    RULE_argumentsForm1 = 38
    RULE_argumentsForm2 = 39
    RULE_argumentsForm3 = 40
    RULE_argumentsForm4 = 41
    RULE_expression = 42
    RULE_value = 43
    RULE_valueArray = 44
    RULE_portDecl = 45
    RULE_type = 46
    RULE_arraySpec = 47
    RULE_widthSpec = 48
    RULE_widthTerm = 49
    RULE_ipV4host = 50
    RULE_ipV6host = 51
    RULE_namedHost = 52
    RULE_host = 53
    RULE_hostName = 54
    RULE_code = 55
    RULE_actionOrigin = 56
    RULE_visibility = 57
    RULE_builtinTrigger = 58
    RULE_modeTransition = 59

    ruleNames =  [ "model", "targetDecl", "importDecl", "reactorDecl", "importedReactor", 
                   "reactor", "typeParm", "typeExpr", "stateVar", "method", 
                   "methodArgument", "inputDecl", "outputDecl", "timer", 
                   "modeDecl", "action", "reaction", "triggerRef", "builtinTriggerRef", 
                   "deadline", "sTP", "preamble", "instantiation", "connection", 
                   "serializer", "attribute", "attrParm", "attrParmValue", 
                   "keyValuePairs", "keyValuePair", "array", "element", 
                   "typedVariable", "variable", "varRef", "varRefOrModeTransition", 
                   "assignment", "parameter", "argumentsForm1", "argumentsForm2", 
                   "argumentsForm3", "argumentsForm4", "expression", "value", 
                   "valueArray", "portDecl", "type", "arraySpec", "widthSpec", 
                   "widthTerm", "ipV4host", "ipV6host", "namedHost", "host", 
                   "hostName", "code", "actionOrigin", "visibility", "builtinTrigger", 
                   "modeTransition" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    COMMA=57
    Boolean=58
    DottedName=59
    WS=60
    TRUE=61
    FALSE=62
    ID=63
    INT=64
    NEGINT=65
    FLOAT_EXP_SUFFIX=66
    SL_COMMENT=67
    ML_COMMENT=68
    LT_ANNOT=69
    STRING=70
    CHAR_LIT=71
    ANY_OTHER=72
    Kebab=73
    IPV4Addr=74
    HEXDIG=75
    H16=76
    LS32=77
    IPV6Addr=78
    SignedFloat=79
    FileName=80
    Path=81
    TimeUnit=82
    OPEN_CLOSE_SQ_BR=83
    SC_MARK=84
    EC_MARK=85
    Token=86

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ModelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def targetDecl(self):
            return self.getTypedRuleContext(LinguaFrancaParser.TargetDeclContext,0)


        def importDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguaFrancaParser.ImportDeclContext)
            else:
                return self.getTypedRuleContext(LinguaFrancaParser.ImportDeclContext,i)


        def preamble(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguaFrancaParser.PreambleContext)
            else:
                return self.getTypedRuleContext(LinguaFrancaParser.PreambleContext,i)


        def reactor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguaFrancaParser.ReactorContext)
            else:
                return self.getTypedRuleContext(LinguaFrancaParser.ReactorContext,i)


        def getRuleIndex(self):
            return LinguaFrancaParser.RULE_model

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModel" ):
                listener.enterModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModel" ):
                listener.exitModel(self)




    def model(self):

        localctx = LinguaFrancaParser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.targetDecl()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LinguaFrancaParser.T__2:
                self.state = 121
                self.importDecl()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LinguaFrancaParser.T__34) | (1 << LinguaFrancaParser.T__51) | (1 << LinguaFrancaParser.T__52))) != 0):
                self.state = 127
                self.preamble()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 133
                self.reactor()
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LinguaFrancaParser.T__5) | (1 << LinguaFrancaParser.T__6) | (1 << LinguaFrancaParser.T__7) | (1 << LinguaFrancaParser.T__8) | (1 << LinguaFrancaParser.T__41))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TargetDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LinguaFrancaParser.ID, 0)

        def keyValuePairs(self):
            return self.getTypedRuleContext(LinguaFrancaParser.KeyValuePairsContext,0)


        def getRuleIndex(self):
            return LinguaFrancaParser.RULE_targetDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTargetDecl" ):
                listener.enterTargetDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTargetDecl" ):
                listener.exitTargetDecl(self)




    def targetDecl(self):

        localctx = LinguaFrancaParser.TargetDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_targetDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(LinguaFrancaParser.T__0)
            self.state = 139
            self.match(LinguaFrancaParser.ID)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LinguaFrancaParser.T__13:
                self.state = 140
                self.keyValuePairs()


            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LinguaFrancaParser.T__1:
                self.state = 143
                self.match(LinguaFrancaParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(LinguaFrancaParser.STRING, 0)

        def importedReactor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguaFrancaParser.ImportedReactorContext)
            else:
                return self.getTypedRuleContext(LinguaFrancaParser.ImportedReactorContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LinguaFrancaParser.COMMA)
            else:
                return self.getToken(LinguaFrancaParser.COMMA, i)

        def getRuleIndex(self):
            return LinguaFrancaParser.RULE_importDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDecl" ):
                listener.enterImportDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDecl" ):
                listener.exitImportDecl(self)




    def importDecl(self):

        localctx = LinguaFrancaParser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(LinguaFrancaParser.T__2)
            self.state = 148 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 147
                self.importedReactor()
                self.state = 150 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==LinguaFrancaParser.ID):
                    break

            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LinguaFrancaParser.COMMA:
                self.state = 152
                self.match(LinguaFrancaParser.COMMA)
                self.state = 154 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 153
                    self.importedReactor()
                    self.state = 156 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==LinguaFrancaParser.ID):
                        break

                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 163
            self.match(LinguaFrancaParser.T__3)
            self.state = 164
            self.match(LinguaFrancaParser.STRING)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LinguaFrancaParser.T__1:
                self.state = 165
                self.match(LinguaFrancaParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReactorDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def reactor(self):
            return self.getTypedRuleContext(LinguaFrancaParser.ReactorContext,0)


        def importedReactor(self):
            return self.getTypedRuleContext(LinguaFrancaParser.ImportedReactorContext,0)


        def getRuleIndex(self):
            return LinguaFrancaParser.RULE_reactorDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReactorDecl" ):
                listener.enterReactorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReactorDecl" ):
                listener.exitReactorDecl(self)




    def reactorDecl(self):
